@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/modules/Attic/generic_stage_target.py,v 1.102 2005/12/19 22:18:54 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/modules/Attic/generic_stage_target.py,v 1.103 2005/12/20 16:28:03 wolf31o2 Exp $
 
 """
 This class does all of the chroot setup, copying of files, etc. It is
@@ -52,8 +52,10 @@ class generic_stage_target(generic_target):
 				"ia64" : "ia64",
 				"alpha" : "alpha",
 				"sparc" : "sparc",
+				"sh2" : "sh",
 				"sh3" : "sh",
 				"sh4" : "sh",
+				"sh2eb" : "sh",
 				"sh3eb" : "sh",
 				"sh4eb" : "sh",
 				"s390" : "s390",
